k8s/namespace.yaml
# Kubernetes namespace
apiVersion: v1
kind: Namespace
metadata:
  name: money-app
